# Hidden-Treasures

./: .gitattributes  Cargo.toml  README.md  in.ex  ubuntu_ins
H200-JLEC/: README.md
H200-JLEC/profiled/: cuda_profile.sh
H200-JLEC/slurm/: cgroup.conf  gres.conf  slurm.conf  slurmdbd.conf  taskprolog.sh
H200-JLEC/torch-setup/: README.md  download_spmm.py  masked_spgemm_roofline.py  run_profile.sh  run_spmm.sh  setup-dev.sh  setup-serve.sh  sft_lora.py  spgemm.py  spmm_sparsity_sweep.py  triton_fused_add.py  verify_env.py
H200-JLEC/torch-setup/cuda-custom/: bindings.cpp  fma_cuda_kernel.cu  setup.py  test_fma.py
LLMs/: 01_llm_tuning.py  02_llm_internals.ipynb  README.md  swizzle.py
LLMs/3-GEMM/: README.md
NUMA/: README.md  disable.sh  membench.c  mt-membench.c  plot_bandwidth.py  plot_miss_rate.py  plot_mlp_latency.py  run.sh
NUMA/LL/: CMakeLists.txt  NumaAllocator.h  NumaLinkedListNode.h  OptimisticLock.h
RISCV/: README.md
Rust/: README.md  main.c
Rust/inputs/: ex0.toy  ex3.toy
Rust/src/: main.rs
Simulators/gem5/: MICROOP_DECODING.md  PROBE.md  SE_FILE_MAPPING.md
Simulators/gem5/Skills/gem5-ports-skill/: SKILL.md
Simulators/vector-lane/: DOCUMENTATION_GEM5_INTERFACE.md  MICROOP_MIGRATION.md  MIGRATION_GUIDE_GEM5_V20.md  Memory.md  Mesh.md
Simulators/zsim/: DESIGN_ZSIM.md  OOO.md  OOO_Pipeline.md
UGradProjects/: CUDA.md  FineTuneLowLevelOpt.md  FinetuneCode.md  Proteus.md  RDMAStore  README.md  SpMM.md  xDSL-MM.md
UGradProjects/CUDA/: CMakeLists.txt  DESIGN.md  Makefile  README.md  test_cuda.cu  test_profile.sh
UGradProjects/CUDA/data/input/: README.md
UGradProjects/CUDA/data/kernels/: README.md  gaussian_5x5.txt  identity_3x3.txt  sobel_x_3x3.txt  sobel_y_3x3.txt
UGradProjects/CUDA/docs/: optimization_guide.md
UGradProjects/CUDA/src/: main.cpp
UGradProjects/CUDA/src/common/: cuda_helpers.h  image_io.h  timer.h  utils.h
UGradProjects/CUDA/src/cpu/: conv_cpu.cpp  conv_cpu.h
UGradProjects/CUDA/src/gpu/: conv_naive.cu  conv_naive.h
UGradProjects/CUDA/tests/: performance_tests.sh  unit_tests.cpp
UGradProjects/CUDA/tools/: profile.sh
UGradProjects/Finetune/: cpu_memory_benchmark_suite.py  memory_benchmark_suite.py  quick_start.py  requirements.txt
autodiff/: 1.xml  Autodiff.py  Fwd  README.md  backprop.py  fundamental_operators.py  graph-plotter.py  graph.py  nodes.py  test.py
fibertree/fibertree-notebooks/notebooks/basic/: fibertree-animation.ipynb
fibertree/fibertree-notebooks/notebooks/dense-gemm/: dense-gemm.ipynb
fibertree/fibertree-notebooks/notebooks/sparse-gemm/: sparch.ipynb
fibertree/fibertree/fibertree/graphics/: movie_canvas.py
halide/: CMakeLists.txt
halide/camera_pipe/: CMakeLists.txt
inputs/: ex1.toy  ex2.toy
lkml/uncached/: DESIGN.md  KERNEL_BUILD.md  Makefile  README.md  TROUBLESHOOTING.md  cma_cache.c  cma_debug.c  cma_test.c  dynamic_cache.c  dynamic_size_test.c  dynamic_test.c  simple_mmap_test.c  test_mmap.c  timing_test.c  uncached_mem.c
src/: main.rs
